--- a/template/module/div.html
+++ b/template/module/div.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="cssindex.css" type="text/css">
+<link rel="stylesheet" href="/static/cssindex.css" type="text/css">
 <title></title>
 </head>
 <body>
