--- a/templates/main.html
+++ b/templates/main.html
@@ -54,9 +54,9 @@ body {font-size:16px;}
   </div>
   
   <!-- Photo grid (modal) -->
-  <div class="row-padding">
+  <div class="row-padding"></div>
   {% block body %}{% end %}
-  </div>
+  
 
  <!-- Modal for full size images on click-->
   <div id="modal01" class="modal black" style="padding-top:0" onclick="this.style.display='none'">
